增加录制脚本功能

--- a/common/config.ini
+++ b/common/config.ini
@@ -1,5 +1,5 @@
 [test]
-url=http://test.pro.testin.cn/account/login.htm
+url=http://yunce.pro.yuncist.cn
 host=10.10.10.10
 driver=webdriver.Chrome()
 [email]
