--- a/common/config.ini
+++ b/common/config.ini
@@ -5,3 +5,6 @@ driver=webdriver.Chrome()
 [email]
 uesrname=chenhaodong@testin.cn
 pwd=123456
+[managerusr]
+uesrname = dujiang@testin.cn
+pwd = 123456
